// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect[Base] should render correctly  1`] = `
<div>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper"
        >
          <span
            class="soui-treeSelect-placeholder soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about compressed 1`] = `
<div>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-clearable soui-treeSelect-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper soui-treeSelect-compressed-wrapper soui-treeSelect-multiple-result-wrapper soui-treeSelect-multiple-compressed-wrapper"
        >
          <span
            style="display: inline-flex;"
          >
            <div
              class="soui-treeSelect-tag soui-tag soui-tag-tag soui-tag-default soui-tag-bright"
            >
              <div
                class="soui-tag-wrapper"
              >
                <span>
                  +10
                </span>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
            />
          </svg>
        </span>
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about disabled 1`] = `
<div>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-wrapper-disabled soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 250px;"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper"
        >
          <span
            class="soui-treeSelect-placeholder soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px; margin-inline-start: 24px;"
    tabindex="0"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper"
        >
          <span
            class="soui-treeSelect-placeholder soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about filter 1`] = `
<div>
  <form
    class="soui-form soui-form-wrapper"
  >
    <div
      class="soui-form-item-wrapper"
      data-soui-status="default"
    >
      <div
        class="soui-form-item-label"
        style="width: 72px;"
      >
        高亮关键字
      </div>
      <div
        class="soui-form-item-control"
        data-soui-role="form-control"
      >
        <button
          class="soui-switch soui-switch-wrapper soui-switch-wrapper-checked"
          role="switch"
          type="button"
        >
          <input
            checked=""
            style="display: none;"
            tabindex="0"
            type="checkbox"
          />
          <div
            class="soui-switch-indicator"
            dir="ltr"
          />
          <div
            class="soui-switch-content"
          >
            <div
              class="soui-switch-text-padding"
            />
          </div>
        </button>
      </div>
    </div>
  </form>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-clearable soui-treeSelect-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper soui-treeSelect-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select content"
            style="width: 100%;"
            value=""
          />
          <span
            class="soui-treeSelect-input-mirror"
          />
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about filter more 1`] = `
<div>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select content"
            style="width: 100%;"
            value=""
          />
          <span
            class="soui-treeSelect-input-mirror"
          />
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about inner title 1`] = `
<div
  class="soui-gap soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; flex-direction: column; gap: 24px;"
>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <div
      class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-wrapper-inner-title soui-treeSelect-wrapper-small soui-treeSelect-clearable"
      data-soui-input-border="true"
      style="width: 300px;"
      tabindex="0"
    >
      <div
        class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
      >
        <div
          class="soui-inner-title-wrapper soui-inner-title-wrapper-small"
        >
          <div
            class="soui-inner-title-title soui-inner-title-top"
          >
            Please select content
          </div>
          <div
            class="soui-inner-title-place"
          >
            <div
              class="soui-inner-title-title"
            >
              Please select content
            </div>
          </div>
          <div
            class="soui-inner-title-content"
          >
            <div
              class="soui-treeSelect-result"
            >
              <div
                class="soui-treeSelect-result-text-wrapper"
              >
                <div
                  class="soui-treeSelect-space"
                >
                   
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="soui-treeSelect-icon-wrapper"
        >
          <span
            class="soui-treeSelect-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <div
      class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-wrapper-inner-title soui-treeSelect-clearable"
      data-soui-input-border="true"
      style="width: 300px;"
      tabindex="0"
    >
      <div
        class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
      >
        <div
          class="soui-inner-title-wrapper"
        >
          <div
            class="soui-inner-title-title soui-inner-title-top"
          >
            Please select content
          </div>
          <div
            class="soui-inner-title-place"
          >
            <div
              class="soui-inner-title-title"
            >
              Please select content
            </div>
          </div>
          <div
            class="soui-inner-title-content"
          >
            <div
              class="soui-treeSelect-result"
            >
              <div
                class="soui-treeSelect-result-text-wrapper"
              >
                <div
                  class="soui-treeSelect-space"
                >
                   
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="soui-treeSelect-icon-wrapper"
        >
          <span
            class="soui-treeSelect-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <div
      class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-wrapper-inner-title soui-treeSelect-wrapper-large soui-treeSelect-clearable"
      data-soui-input-border="true"
      style="width: 300px;"
      tabindex="0"
    >
      <div
        class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
      >
        <div
          class="soui-inner-title-wrapper soui-inner-title-wrapper-large"
        >
          <div
            class="soui-inner-title-title soui-inner-title-top"
          >
            Please select content
          </div>
          <div
            class="soui-inner-title-place"
          >
            <div
              class="soui-inner-title-title"
            >
              Please select content
            </div>
          </div>
          <div
            class="soui-inner-title-content"
          >
            <div
              class="soui-treeSelect-result"
            >
              <div
                class="soui-treeSelect-result-text-wrapper"
              >
                <div
                  class="soui-treeSelect-space"
                >
                   
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="soui-treeSelect-icon-wrapper"
        >
          <span
            class="soui-treeSelect-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about loader 1`] = `
<div
  class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-clearable soui-treeSelect-multiple"
  data-soui-input-border="true"
  style="width: 300px;"
  tabindex="0"
>
  <div
    class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
  >
    <div
      class="soui-treeSelect-result"
    >
      <div
        class="soui-treeSelect-result-text-wrapper soui-treeSelect-multiple-result-wrapper"
      >
        <span
          class="soui-treeSelect-placeholder soui-treeSelect-ellipsis"
        >
          <span>
            Please select content
          </span>
        </span>
      </div>
    </div>
    <div
      class="soui-treeSelect-icon-wrapper"
    >
      <span
        class="soui-treeSelect-arrow-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-clearable soui-treeSelect-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper soui-treeSelect-multiple-result-wrapper"
        >
          <span
            class="soui-treeSelect-placeholder soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about size 1`] = `
<div
  style="width: 100%; display: flex; align-items: center; gap: 24px;"
>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-wrapper-small soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper"
        >
          <span
            class="soui-treeSelect-placeholder soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper"
        >
          <span
            class="soui-treeSelect-placeholder soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-wrapper-empty soui-treeSelect-wrapper-large soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper"
        >
          <span
            class="soui-treeSelect-placeholder soui-treeSelect-ellipsis"
          >
            <span>
              Please select content
            </span>
          </span>
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect[Base] should render correctly about unmatch 1`] = `
<div>
  <div
    class="soui-tree-select soui-treeSelect-wrapper soui-treeSelect-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="soui-treeSelect-result-wrapper soui-treeSelect-wrapper-padding-box soui-treeSelect-wrapper-inner-title-top soui-treeSelect-wrapper-inner-title-bottom"
    >
      <div
        class="soui-treeSelect-result"
      >
        <div
          class="soui-treeSelect-result-text-wrapper"
        >
          <span
            class="soui-treeSelect-ellipsis"
          >
            I'm unmatched item
          </span>
        </div>
      </div>
      <div
        class="soui-treeSelect-icon-wrapper"
      >
        <span
          class="soui-treeSelect-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
            />
          </svg>
        </span>
        <span
          class="soui-treeSelect-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
